--- a/dev/templates/legacy.pug
+++ b/dev/templates/legacy.pug
@@ -4,9 +4,9 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(charset='UTF-8')
     meta(name='viewport', content='user-scalable=yes, width=device-width, initial-scale=1, maximum-scale=5')
-    meta(name='theme-color', content='#333333')
-    meta(name='msapplication-TileColor', content='#333333')
-    meta(name='msapplication-TileImage', content='/favicons/ms-icon-144x144.png')
+    meta(name='theme-color', content='#1976d2')
+    meta(name='msapplication-TileColor', content='#1976d2')
+    meta(name='msapplication-TileImage', content='/favicons/mstile-150x150.png')
 
     title= pageMeta.title + ' | ' + config.title
 
@@ -20,11 +20,11 @@ html
     meta(property='og:site_name', content=config.title)
 
     //- Favicon
-    each favsize in [57, 60, 72, 76, 114, 120, 144, 152, 180]
-      link(rel='apple-touch-icon', sizes=favsize + 'x' + favsize, href='/favicons/apple-icon-' + favsize + 'x' + favsize + '.png')
+    link(rel='apple-touch-icon', sizes='180x180', href='/apple-touch-icon.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-icon-192x192.png')
-    each favsize in [32, 96, 16]
-      link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
+    link(rel='icon', type='image/png', sizes='32x32', href='/favicons/favicon-32x32.png')
+    link(rel='icon', type='image/png', sizes='16x16', href='/favicons/favicon-16x16.png')
+    link(rel='mask-icon', href='/favicons/safari-pinned-tab.svg', color='#1976d2')
     link(rel='manifest', href='/manifest.json')
 
     //- Icon Set
