fix: blockquote missing right padding (#1168)

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -226,7 +226,7 @@
   }
 
   blockquote {
-    padding: 0 0 1rem 1rem;
+    padding: 0 1rem 1rem 1rem;
     border-left: 5px solid mc('blue', '500');
     border-radius: .5rem;
     margin: 1rem 0;
