fix: groups edit tabs UI

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -11,6 +11,7 @@
 @import 'components/v-data-table';
 @import 'components/v-dialog';
 @import 'components/v-form';
+@import 'components/v-tabs';
 
 // @import '../libs/twemoji/twemoji-awesome';
 // @import '../libs/prism/prism.css';
