--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -5,7 +5,26 @@ block head
     style(type='text/css')!= injectCode.css
   if injectCode.head
     != injectCode.head
-
+  script.
+    window.onload = function() {
+      document.querySelectorAll('div.embed-page').forEach(node => {
+        let [url, anc] = node.innerHTML.split('#')
+        console.log('Embed Node:', url, anc)
+        fetch(url, {credentials: 'same-origin'}).then(res => res.text()).then(txt => { 
+          if (!anc) node.innerHTML = txt
+          else if (anc.startsWith('?')) { 
+            console.log('GOT ANC QUERY', anc.substring(1))
+            let dom = (new DOMParser()).parseFromString(txt, 'text/html')
+            let ext = dom.getElementById(anc.substring(1))
+            console.log(dom)
+          } else {
+            let exp = new RegExp(`<h(\\d) id="${anc}".*?<\\/h\\d>([\\s\\S]+?)<(h\\1|h3|h2|h1|\\/div)`)
+            let ext = exp.exec(txt)
+            node.innerHTML = ext ? ext[2] : 'Not Found'
+          }
+        })
+      })
+    }
 block body
   #root
     page(
