--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -487,7 +487,7 @@ ul {
       > p {
         display:inline-block;
         vertical-align:top;
-        padding-top:0!important;
+        padding-top:0;
       }
   }
   }
