--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -29,7 +29,13 @@ html(lang=siteConfig.lang)
 
     //- Site Properties
     script.
-      var siteConfig = !{JSON.stringify(siteConfig)}; var siteLangs = !{JSON.stringify(langs)}
+      var siteConfig = !{JSON.stringify(siteConfig)}
+      var siteLangs = !{JSON.stringify(langs)}
+
+    //- Dev Mode Warning
+    if devMode
+      script.
+        siteConfig.devMode = true
 
     //- Icon Set
     if config.theming.iconset === 'fa'
@@ -51,8 +57,8 @@ html(lang=siteConfig.lang)
     link(
       type='text/css'
       rel='stylesheet'
-      href='/css/app.b98d10f6bb893bd895c4.css'
-      integrity=config.security.securitySRI ? 'sha256-jq2Kb/NnMahn7H/2jFJr2LA83xz2/E/Srkal5y7lsi0= sha512-i8DSU4d4hSct5qP/UwqIYX3k2zf6a216ksGM1VrCFL0O1JS57EZt3yeNpyC3J9hXFAmGzrD8Gbi5mCYKdsvogA==' : false
+      href='/css/app.b378ac44c34c8a16f5c2.css'
+      integrity=config.security.securitySRI ? 'sha256-jHPMjyTtGNqCTQuCxsH/Jf0rH0p41DK8QCFbtvhCtBk= sha512-oht2UrpZZIZ8LQ1siXSlBwgS7aUMrzR8h+2YmdX5VexrL72nBIZ2lbJFfZdGoPPogX5/GZJjBN6uS39eBSIm6w==' : false
       crossorigin='use-credentials'
     )
       
@@ -63,8 +69,8 @@ html(lang=siteConfig.lang)
       
     script(
       type='text/javascript'
-      src='/js/runtime.79e192f68c7933313fc5.js'
-      integrity=config.security.securitySRI ? 'sha256-TXFe1uzjWUz4nYhXBGApuWeaoGyFCkdMMh2H4Z1wncA= sha512-vtPB7dXS9rQ0FrqXc6lClQTDHfA3Jd/AyCHRDplu7kl66Uibl6SxOlNB4ZYAYP+LzTOZbgRPOKDrcgyJfpCJyA==' : false
+      src='/js/runtime.553249712b4eb200e26f.js'
+      integrity=config.security.securitySRI ? 'sha256-T7E588n4LSVmkMtaZzFRsYE2FylXj+Nld0g1pnOj3qU= sha512-1+sbNAoTuzhZHRbBGBngXeNq08q1rfucQTc3DP78AH30T2jhkvbzgyK60sk4TzBJKGhVB29XUf2Nz7HSsFe9hg==' : false
       crossorigin='use-credentials'
       )
       
@@ -72,8 +78,8 @@ html(lang=siteConfig.lang)
       
     script(
       type='text/javascript'
-      src='/js/app.b98d10f6bb893bd895c4.js'
-      integrity=config.security.securitySRI ? 'sha256-MOi4oo6UZd0XVJKbg+BPy4Vpf6PIGq7n2lD6PJN7tIk= sha512-NHmZtNstK6QfgFbwGqtDxBoaRW25AzhDXSgwPsM7U62ENF0xxWZmOAIBV7/Hh9KIUuXqzieWbrmLI1A/rNzGKA==' : false
+      src='/js/app.b378ac44c34c8a16f5c2.js'
+      integrity=config.security.securitySRI ? 'sha256-5gX6SAqwimtCC4crVOJb7fFIMt6k4TXuPxAV7O8WadA= sha512-zmuZ0NjdafX4grx9dUvGEDCXOYIvO3qtqWM6WXuLIMxCLBA7TZkH8/WnAATr+k6hGjlES24eYpp5ILQoCWzb2Q==' : false
       crossorigin='use-credentials'
       )
       
