--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -312,8 +312,8 @@
   // ---------------------------------
 
   ol, ul {
-    padding: 1rem 0 0 1rem;
-    list-style-position: outside;
+	  padding: 1rem 0 0 0;
+     list-style-position: inside;
 
     @at-root .is-rtl & {
       padding-left: 0;
@@ -472,8 +472,28 @@
     }
   }
 
-  ul {
-    list-style: square outside;
+ul {
+    list-style: none;
+    width: 100%;
+    > li::before {
+      content: '\25b8';
+      color: mc('grey', '600');
+      display: inline-block;
+      width: 1.35rem;
+      
+      @at-root .is-rtl & {
+        content: '\25C0' ;
+      }
+    }
+    > li {
+      display:flex;
+      flex-wrap: wrap;
+      > p {
+        display:inline-block;
+        vertical-align:top;
+        padding-top:0;
+      }
+  }
   }
 
   // ---------------------------------
