--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -631,6 +631,8 @@
     &.align-right {
       float: right;
       margin: 0 0 1rem 1rem;
+      z-index: 1;
+      position: relative;
     }
     &.align-center {
       display: block;
