fix: images on top of headers lines #1487 (#1588)
Images on top of headers lines
#1487

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -633,6 +633,8 @@
     &.align-right {
       float: right;
       margin: 0 0 1rem 1rem;
+      z-index: 1;
+      position: relative;
     }
     &.align-center {
       display: block;
