--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -798,12 +798,15 @@
 @media print {
   .nav-header,
   .v-navigation-drawer,
-  .v-footer,
   .v-btn--fab,
   .page-col-sd,
   .v-tooltip__content
   {
     display: none !important;
+  }
+
+  .layout {
+    display: block !important;
   }
 
   .page-col-content {
