feat: hide sidebar option

--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -22,6 +22,7 @@ block body
       :toc=page.toc
       :page-id=page.id
       :sidebar=sidebar
+      nav-mode=config.nav.mode
       )
       template(slot='contents')
         div(v-pre)!= page.render
