--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -19,9 +19,9 @@ block body
       author-name=page.authorName
       :author-id=page.authorId
       :is-published=page.isPublished.toString()
-      :toc=page.toc
+      toc=Buffer.from(page.toc).toString('base64')
       :page-id=page.id
-      :sidebar=sidebar
+      sidebar=Buffer.from(JSON.stringify(sidebar)).toString('base64')
       nav-mode=config.nav.mode
       )
       template(slot='contents')
