remove unsuitable fonts for lang-fa

--- a/client/scss/fonts/arabic.scss
+++ b/client/scss/fonts/arabic.scss
@@ -38,7 +38,7 @@
   font-style: normal;
 }
 
-html:lang(ar), html:lang(fa) {
+html:lang(ar) {
   font-family: Tajawal, sans-serif;
 
   .v-application {
