fix: css linting missing fallback font

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -238,7 +238,7 @@
 
     &::before {
       display: inline-block;
-      font: normal normal normal 24px/1 "Material Design Icons";
+      font: normal normal normal 24px/1 "Material Design Icons", sans-serif;
       position: absolute;
       margin-top: -12px;
       top: 50%;
