--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,6 +14,7 @@
 @import 'components/v-dialog';
 @import 'components/v-form';
 @import 'components/v-tabs';
+@import 'components/figcaption';
 
 // @import '../libs/twemoji/twemoji-awesome';
 // @import '../libs/prism/prism.css';
