--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -803,7 +803,71 @@
     }
   }
 
+  // -------------------------------------
+  // INLINE FIGURES AND CAPTIONS FOR MARKDOWN
+  // ----------------------------------------
+
+  .figcaption {
+    font-size: 12px;
+    color: mc('grey', '700');
+    background-color: mc('grey', '100');
+
+    @at-root .theme--dark & {
+      color: mc('grey', '400');
+      background-color: mc('grey', '800');
+    }
+  }
+
+  .illustration {
+    padding-top: 1.25rem; // depends on paragraph top margin and line-height
+
+    &.align-left {
+      width: auto;
+      clear: left;
+      float: left;
+      margin: 0 2ex 1rem 0;
+    }
+    &.align-right {
+      width: auto;
+      clear: right;
+      float: right;
+      margin: 0 0 1rem 1.5ex; // less margin needed when
+                              // figure is floating right
+                              // in left-aligned text
+    }
+
+    figure {
+      display: table-cell !important;
+      width: 0;
+      padding: 1ex;
+
+      font-size: 12px;
+      color: mc('grey', '700');
+      background-color: mc('grey', '100');
+
+      @at-root .theme--dark & {
+        color: mc('grey', '400');
+        background-color: mc('grey', '800');
+      }
+
+      img {
+        display: block;
+        max-width: none !important;
+      }
+
+      figcaption {
+        margin-top: 0.75rem;
+        font-size: 0.75rem;
+
+        label {
+          font-style: italic;
+        }
+      }
+    }
+  }
 }
+
+
 
 // ---------------
 // RTL FIXES
