Fix #1964 404 on apple-touch-icon

--- a/dev/templates/setup.pug
+++ b/dev/templates/setup.pug
@@ -10,7 +10,7 @@ html
     title Wiki.js Setup
 
     //- Favicon
-    link(rel='apple-touch-icon', sizes='180x180', href='/apple-touch-icon.png')
+    link(rel='apple-touch-icon', sizes='180x180', href='/favicons/apple-touch-icon.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/favicons/android-chrome-192x192.png')
     link(rel='icon', type='image/png', sizes='32x32', href='/favicons/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicons/favicon-16x16.png')
