fix: use quote icon for plain blockquote

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -244,7 +244,7 @@
       top: 50%;
       left: -38px;
       color: rgba(255, 255, 255, .7);
-      content: "\F02FC";
+      content: "\F0757";
     }
 
     > p:first-child .emoji {
