feat: Edit / Page Create Buttons showing up even if no action is allowed #1780

--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -18,4 +18,5 @@ block body
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
+      effective-permissions=Buffer.from(JSON.stringify(effectivePermissions)).toString('base64')
       )
