--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -14,6 +14,8 @@ block body
       description=page.description
       :tags=page.tags
       :is-published=page.isPublished
+      script-css=page.extra.css
+      script-js=page.extra.js
       init-mode=page.mode
       init-editor=page.editorKey
       init-content=page.content
