feat: page published state + comments localization

--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -14,6 +14,8 @@ block body
       description=page.description
       :tags=page.tags
       :is-published=page.isPublished
+      publish-start-date=page.publishStartDate
+      publish-end-date=page.publishEndDate
       script-css=page.extra.css
       script-js=page.extra.js
       init-mode=page.mode
