misc: update dependencies + fix vuetify styles

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -1,6 +1,6 @@
 /* THEME SPECIFIC STYLES */
 
-.v-content .contents {
+.v-main .contents {
   color: mc('grey', '800');
   padding: .5rem 0 50px;
   position: relative;
