--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -2,4 +2,7 @@ extends master.pug
 
 block body
   #root.is-fullscreen
-    login
+    login(
+      bg-url=bgUrl
+      hide-local=hideLocal
+    )
