--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -19,6 +19,7 @@ block body
       script-css=page.extra.css
       script-js=page.extra.js
       init-mode=page.mode
+      :toc-level=page.tocLevel
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
