feat: draw.io code insert + preview (wip)

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -581,6 +581,10 @@
     }
   }
 
+  pre.diagram {
+    margin-top: 1rem;
+  }
+
   // ---------------------------------
   // TASK LISTS
   // ---------------------------------
