--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -20,6 +20,7 @@ block body
       script-js=page.extra.js
       init-mode=page.mode
       :toc-level=page.tocLevel
+      :toc-collapse-level=page.tocCollapseLevel
       init-editor=page.editorKey
       init-content=page.content
       checkout-date=page.updatedAt
