fix: media print css

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -966,13 +966,13 @@
     }
   }
 
-  .v-content {
+  .v-main {
     padding: 0 !important;
     font-size: 14px;
     background-color: #FFF;
   }
 
-  .v-content .contents {
+  .v-main .contents {
     color: #000;
     background-color: #FFF;
 
