- Fix broken drawio svg diagram (rtl issue)

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -583,6 +583,9 @@
 
   .diagram {
     margin-top: 1rem;
+    svg:first-child {
+      direction: ltr;
+    }
   }
 
   // ---------------------------------
