--- a/client/themes/mytheme/scss/app.scss
+++ b/client/themes/mytheme/scss/app.scss
@@ -1023,6 +1023,11 @@ span.cm-comment {
     margin-top: 1.8rem;
   }
 
+  h5 + p, h4 + p {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
 }
 
 .v-application .v-main .contents {
