--- a/client/themes/mytheme/scss/app.scss
+++ b/client/themes/mytheme/scss/app.scss
@@ -993,6 +993,9 @@ span.cm-comment {
   p, ol, ul, li {
     font-size: 1.2rem;
   }
+  p {
+    padding: 0.5rem 0 0;
+  }
   h1 {
     border-bottom: 1px solid white;
     margin-bottom: 2rem;
