--- a/client/themes/mytheme/scss/app.scss
+++ b/client/themes/mytheme/scss/app.scss
@@ -989,12 +989,16 @@ span.cm-comment {
   }
 }
 
+v-main .contents {
+  padding: .5rem 0 200px;
+}
+
 .v-main .contents {
   p, ol, ul, li {
     font-size: 1.2rem;
   }
   p {
-    padding: 0.5rem 0 0;
+    padding: 0.8rem 0 0;
   }
   h1 {
     border-bottom: 1px solid white;
