--- a/client/themes/mytheme/scss/app.scss
+++ b/client/themes/mytheme/scss/app.scss
@@ -1002,7 +1002,7 @@ span.cm-comment {
     padding: 1.5rem 0 0;
   }
   p.tighter {
-    padding: 0.8rem 0 0;
+    padding: 0 0 0;
   }
   h1 {
     border-bottom: 1px solid white;
