--- a/client/themes/mytheme/scss/app.scss
+++ b/client/themes/mytheme/scss/app.scss
@@ -1131,6 +1131,11 @@ span.cm-comment {
     //color: $tibColorDark;
   }
 
+  .tibetan.nocolor, .nocolor {
+    color: gray !important;
+  }
+
+
 }
 
 .theme--light {
