--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -158,6 +158,10 @@
       width: 100%;
       height: 1px;
       background: linear-gradient(to right, mc('grey', '500'), rgba(mc('grey', '500'), 0) 90%);
+
+      @at-root .is-rtl & {
+        background: linear-gradient(to left, mc('grey', '500'), rgba(mc('grey', '500'), 0) 90%);
+      }
     }
   }
   h4, h5, h6 {
@@ -178,16 +182,28 @@
       width: 100%;
       height: 1px;
       background: linear-gradient(to right, mc('grey', '500'), rgba(mc('grey', '500'), 0) 70%);
+
+      @at-root .is-rtl & {
+        background: linear-gradient(to left, mc('grey', '500'), rgba(mc('grey', '500'), 0) 70%);
+      }
     }
   }
   h5 {
     &::after {
       background: linear-gradient(to right, mc('grey', '500'), rgba(mc('grey', '500'), 0) 50%);
+      
+      @at-root .is-rtl & {
+        background: linear-gradient(to left, mc('grey', '500'), rgba(mc('grey', '500'), 0) 50%);
+      }
     }
   }
   h6 {
     &::after {
       background: linear-gradient(to right, mc('grey', '500'), rgba(mc('grey', '500'), 0) 30%);
+
+      @at-root .is-rtl & {
+        background: linear-gradient(to left, mc('grey', '500'), rgba(mc('grey', '500'), 0) 30%);
+      }
     }
   }
 
